@@ -8,9 +8,9 @@
 # We will build some tools/scripts that allow us to
 # change this easily when relocating software.
 #==============================================================================
-EPICS_SITE_TOP=/afs/slac/g/cd/swe/rhel5/epics
-BASE_SITE_TOP=/afs/slac/g/cd/swe/rhel5/epics/base
-MODULES_SITE_TOP=/afs/slac/g/cd/swe/rhel5/epics/modules/R3-14-12
-IOC_SITE_TOP=/afs/slac/g/cd/swe/rhel5/epics/iocTop/R3-14-12
+EPICS_SITE_TOP=/afs/slac/g/lcls/epics
+BASE_SITE_TOP=/afs/slac/g/lcls/epics/base
+MODULES_SITE_TOP=/afs/slac/g/lcls/epics/modules/R3-14-12
+IOC_SITE_TOP=/afs/slac/g/lcls/epics/iocTop
 EPICS_BASE_VER=base-R3-14-12
 #==============================================================================
