@@ -10,6 +10,14 @@
 <img src="http://www.aps.anl.gov/bcda/Images/logo101.gif" alt=
 "EPICS" hspace="5" height="101" width="101" align="right">
 
+<h1>sscan 2-7</h1>
+<ul>
+
+<li>saveData is not ready for 64-bit architectures.  It writes 1D files
+correctly, but not 2D or higher.
+
+</ul>
+
 <h1>sscan 2-6-6</h1>
 <ul>
 <li>On Linux, Solaris, and probably other non-real-time operating systems,
@@ -18,6 +26,7 @@ monitored DATA fields from sscan records can be received out of order.
 This bug affects 2.6.6 and all earlier releases of the sscan module.
 <li>scans with any fly-mode positioners and no detector triggers fail to
 launch fly-mode positioners to the end point.
+<li>saveData is not ready for 64-bit architectures
 </ul>
 
 
