@@ -10,6 +10,47 @@ content="text/html; charset=iso-8859-1">
 
 <h1 align="center">sscan Release Notes</h1>
 
+<h2 align="center">Release 2-8-1 - Sept. 1, 2012</h2>
+<ul>
+
+<li>Fixed minor problems in writeXDR.h and writeXDR.c that prevented it from compiling
+on Windows with Visual Studio compiler.</li>
+
+<li>Previously, saveData crashed with versions of vxWorks that have a
+10-function xdr_ops table.  Now xdr_stdio.c checks for 8-, 10-, and
+12-function tables.
+
+
+<h2 align="center">Release 2-8 - Feb 8, 2012</h2>
+<ul>
+
+<li>Previously, saveData could not be buit on WIN32 because Windows has no XDR
+library.  The file saveData_writeXDR.c uses a local implementation (writeXDR) of
+XDR's file-writing specification that doesn't require any help from the OS. 
+This support runs on any OS, but it's likely to be slower than system
+implementations, and so should probably be used only for WIN32.
+
+<li>Previously, aborting a sscan record that was already idle was treated as an
+error (special returned -1, which could be confusing to clients, and served no
+useful purpose).  Thanks to Sergey Stepanov for noticing this very long-standing
+problem.
+
+<li>Previously, saveData did not flush the channel access output buffer after
+doing cagets for extra PVs.  This resulted in some PVs having stale values in
+the data file - particularly PVs repeated by a PV gateway.  Thanks to Wang
+Xiaoqiang (PSI) for this fix.
+
+<li>Previously, on 64-bit architectures, saveData wrote 2D and higher files with
+NPTS*4 extra bytes immediately preceding the name of outer-loop sscan-record
+names, because it calculated file offsets using sizeof(long) instead of
+sizeof(epicsInt32).  Thanks to Eric Berryman for reporting the problem.
+
+<li>Previously, writing an array of DBF_LONG or DBF_USHORT failed on 64-bit OS. 
+This happened when such an array was specified in the "extraPV" section of
+saveData.req
+
+</ul>
+
 <h2 align="center">Release 2-7 - August 26, 2011</h2>
 <ul>
 
